--- a/ajax.html
+++ b/ajax.html
@@ -11,7 +11,7 @@
     <title>Ajax in one video</title>
   </head>
   <body>
-    <h1>Ajax Tutorial</h1>
+    <!-- <h1>Ajax Tutorial</h1>
     <button type="button" id="fetchBtn" class="btn btn-primary">Fetch Data</button>
     <button type="button" id="popBtn" class="btn btn-secondary">Populate</button>
 
@@ -22,6 +22,10 @@
 
         </ul>
 
+    </div> -->
+
+    <div>
+      <button>click me</button>
     </div>
 
 
@@ -34,6 +38,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="js/generator.js"></script>
+    <script src="js/EventBubling.js"></script>
   </body>
 </html>
